2012-08-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Make an update release 15.8a

	* configure: Regenerated.

	* contrib/Makefile.in: Regenerated.

	* doc/Makefile.in: Regenerated.

	* Makefile.in: Regenerated.

	* doc/Makefile.am (EXTRA_DIST): xcscope.1 was missing from the
	distribution.

	* Makefile.am (EXTRA_DIST): Include INSTALL.gnu
	(dist-hook): Directories without Makefile.am in them cause
	unwanted CVS files to be included.  Remove them from the tarball.

	* contrib/Makefile.am (EXTRA_DIST): cctree was missing from the
	distribution.

	* configure.in: Update version to 15.8a

	* src/version.h (FIXVERSION): Update to 8a.

2012-08-02  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/version.h (FIXVERSION): Update missed.

	* src/fscanner.l: # with nothing after it would throw off the line
	count. (Bug #3553579)

2012-07-10 Neil Horman <nhorman@tuxdriver.com>

	* src/invlib.c: Corrected some sizing of amtused in invlib.c.
	sizeof(long) is dead reckoned to be 4 bytes, which is wrong on
	x86_64.  Reported by Paul Bolle

2012-06-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gscope.c: Added placeholder file, needed for distcheck.

	* configure.in: Added AM_PROC_CC_C_O, needed for upgrade of
	automake.

	* compile, config.guess, config.sub, install-sh, missing, depcomp,
	ylwrap, INSTALL.gnu, mkinstalldirs: Updated to automake 1.11.3,
	autoconf 2.68.

	* Makefile.in, aclocal.m4, src/Makefile.in, contrib/Makefile.in,
	doc/Makefile.in: Regenerated by automake 1.11.1.

	* configure, config.h.in: Regenerated by autoconf 2.68.

2012-06-15  Neil Horman  <nhorman@tuxdriver.com>
	* configure.in: Update version in configure.in in prep for new release

2012-06-15  Neil Horman  <nhorman@tuxdriver.com>
	* src/find.c: Add check to make sure that second '=' on assignment
	search isn't part of a digraph

2012-05-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
